# boe-ciudadano-agent

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_traducir.txt  02_encontrar.txt  03_vigilancia.txt  04_orientar.txt  05_combinada.txt  06_asesoramiento_guardarrail.txt  README.md
src/boe_agent/: __init__.py  agent.py  cli.py  guardrail_middleware.py  mcp.py  prompts.py  subagents.py  tools.py
src/boe_agent/core/: __init__.py  divulgacion.py  guardrails.py  orientacion.py  verificacion.py  vigilancia.py
src/boe_agent/skills/encontrar/: SKILL.md
src/boe_agent/skills/orientar/: SKILL.md
src/boe_agent/skills/traducir/: SKILL.md
src/boe_agent/skills/vigilancia/: SKILL.md
tests/: conftest.py  test_assembly.py  test_divulgacion.py  test_guardrail_middleware.py  test_guardrails.py  test_live_smoke.py  test_mcp_config.py  test_orientacion.py  test_skills.py  test_verificacion.py  test_vigilancia.py
